# EBookBot

./: .env  README.md  docker-compose.yml  pyproject.toml
client/: bot.py  call_types.py  config.py  handlers.py  nohup.out  utils.py
parser/: flibusta.py
server/: db.sqlite  db.sqlite-shm  db.sqlite-wal
server/backend/: database.py  enums.py  main.py  models.py  resources.py  routes.py  settings.py  templates.py
server/fastapi_admin/locales/ru_RU/LC_MESSAGES/: messages.po
server/migrations/models/: 0_20220925163140_init.py
